@@ -1,3 +1,7 @@
+2007-08-23  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Added Albanian language to TYPO3
+
 2007-08-28  Kasper Skaarhoj  <kasper2007@typo3.com>
 
 	* Improvements as announced in June on the core list (except workspace moving)
